# week3_exercises

./: .gitignore  README.md
Automata_Example/: CMakeLists.txt
Automata_Example/include/: automaton.h
Automata_Example/source/: CMakeLists.txt  automaton.cpp  main.cpp
Automata_Example/test/: tests.cpp
Student_Grade_Example/include/: Student.hpp
Student_Grade_Example/source/: CMakeLists.txt  Student.cpp  main.cpp
Student_Grade_Example/test/: CMakeLists.txt  test_grades.cpp
